Códigos refatorados e assisti até a aula 191. Interfaces Funcionais Antes Java 8